index.php with articles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,9 @@ ul {
   flex-flow: column;
   color: var(--text-color);
 }
-
+.overflow {
+  overflow: hidden;
+}
 /* header */
 header {
   background-color: var(--primary);
