add filter article in index.php

--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -24,3 +24,8 @@
   background-color: var(--primary);
   color: var(--text-color-light);
 }
+
+.small {
+  font-size: 1.2rem;
+  margin: 0 0.5rem;
+}
