--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,7 +27,30 @@
   transition: transform 0.6s;
 }
 
-.category-container h2 {
+.newsfeed-content h2 {
   font-size: 1.9rem;
   padding: 0.5rem 1rem;
+}
+
+.newsfeed-container {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.category-container {
+  flex: 240px;
+}
+
+.category-container li {
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.category-container li:hover {
+  color: var(--primary);
+}
+
+.cat-active {
+  font-weight: 700;
+  color: var(--primary);
 }
