--- a/public/css/show-article.css
+++ b/public/css/show-article.css
@@ -28,3 +28,10 @@
   margin-bottom: 1rem;
   display: block;
 }
+
+.action {
+  margin-top: 2rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
