--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,7 @@ header {
   margin: 0;
   display: flex;
   flex-flow: row;
+  align-items: center;
 }
 .header-menu li {
   margin-left: 1rem;
@@ -90,6 +91,22 @@ header {
 
 .active {
   background-color: var(--primary-dark);
+}
+
+li.header-profile {
+  font-weight: 700;
+  background-color: var(--dark);
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+}
+
+li.header-profile:hover {
+  background-color: var(--dark);
 }
 /* content */
 .content {
