--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,7 @@ header {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .header-menu {
   margin: 0;
@@ -79,6 +80,36 @@ header {
   padding: 5px 15px;
   transition: background-color 0.2s;
 }
+.header-mobile {
+  display: none;
+}
+.header-mobile-list {
+  display: none;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  color: var(--text-color);
+  background: var(--background-light);
+}
+.header-mobile-list li {
+  padding: 1rem;
+}
+.header-mobile-list li.active {
+  color: white;
+  font-weight: 700;
+}
+.show {
+  display: block;
+}
+@media only screen and (max-width: 800px) {
+  .header-menu {
+    display: none;
+  }
+  .header-mobile {
+    display: block;
+  }
+}
+
 .header-menu li:hover {
   background-color: var(--primary-dark);
 }
