--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,7 +46,15 @@
   display: flex;
   flex-flow: row nowrap;
 }
-
+@media only screen and (max-width: 800px) {
+  .category-container {
+    display: none;
+  }
+  .articles-container {
+    flex-flow: column;
+    align-items: unset;
+  }
+}
 .category-container {
   flex: 240px;
 }
