--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -17,6 +17,7 @@
 
 .articles-list ul li {
   display: flex;
+  flex-flow: row;
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem;
@@ -24,4 +25,14 @@
   border-radius: 6px;
   background-color: white;
   border: var(--border);
+}
+
+@media only screen and (max-width: 800px) {
+  .articles-list ul li {
+    flex-flow: column;
+    width: 100%;
+  }
+  .article-actions {
+    margin-top: 1.5rem;
+  }
 }
