--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,14 +101,6 @@ header {
 .show {
   display: block;
 }
-@media only screen and (max-width: 800px) {
-  .header-menu {
-    display: none;
-  }
-  .header-mobile {
-    display: block;
-  }
-}
 
 .header-menu li:hover {
   background-color: var(--primary-dark);
@@ -215,4 +207,19 @@ textarea {
 .text-error {
   font-size: 1.2rem;
   color: var(--danger);
+}
+
+@media only screen and (max-width: 800px) {
+  .header-menu {
+    display: none;
+  }
+  .header-mobile {
+    display: block;
+  }
+  .form-container {
+    width: 100%;
+  }
+  .content {
+    padding: 1rem;
+  }
 }
